# Sextant

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.zh.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
adapters/claude-code/: CLAUDE.md.snippet  README.md  install.sh
adapters/claude-code/agents/: sextant-builder.md  sextant-planner.md  sextant-rca.md  sextant-reviewer.md  sextant-spec.md
adapters/claude-code/commands/: sextant-build.md  sextant-init.md  sextant-plan.md  sextant-record.md  sextant-spec.md  sextant-status.md  sextant-verify.md  sextant.md
adapters/claude-code/hooks/: README.md  settings.example.json
cli/: lint.py  main.py  metrics.py  parsers.py  schema.py  status.py  tokens.py
core/knowledge/: EVOLUTION.template.md  PROJECT_EVOLUTION_LOG.template.md  SEXTANT.template.md  hook-registry.template.json
core/roles/: builder.md  planner.md  rca.md  reviewer.md  spec.md
core/rules/: reviewer-context-boundary.md  rollback.md  stage-gates.md  task-classification.md
core/snippets/: check-upstream-gate.md
core/templates/: plan.md  rca.md  record.md  review.md  spec.md
docs/: dogfood.md  metrics.md  quickstart.md  trace-contract.md
scripts/: bootstrap.sh  bump-version.sh  release.sh
tasks/: lessons.md  todo.md
tests/: run-all.sh  test-bootstrap.sh  test-cli.sh  test-install.sh  test-json.sh  test-release.sh  test-structure.sh
tests/cli/: test_lint.py  test_metrics.py  test_status.py  test_tokens.py
tests/lib/: helpers.sh
